--- a/apps/SpareParts/AndroidManifest.xml
+++ b/apps/SpareParts/AndroidManifest.xml
@@ -15,10 +15,12 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.android.spare_parts">
+        package="com.android.spare_parts" android:sharedUserId="android.uid.system">
     <uses-permission android:name="android.permission.SET_ANIMATION_SCALE" />
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
     <application android:label="@string/app_label"
             android:icon="@drawable/app_icon">
